feat: add bulk S3 delete_objects API
